--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+data/
+
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
