--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,13 @@ crate-type = ["cdylib"]
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
 napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
 napi-derive = "2.12.2"
+serde_json = "1"
+serde = { version = "1", features = ["derive"] }
+anyhow = "1.0.83"
+
+skar-client-fuel = "0.0.7"
+skar-net-types-fuel = "0.0.3"
+skar-format-fuel = "0.0.4"
 
 [build-dependencies]
 napi-build = "2.0.1"
