--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,18 @@ crate-type = ["cdylib"]
 
 [dependencies]
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
-napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
-napi-derive = "2.12.2"
+napi = { version = "2", default-features = false, features = [
+    "napi9",
+    "async",
+    "serde-json",
+] }
+napi-derive = "2"
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
+tokio = { version = "1", features = ["rt-multi-thread"] }
 anyhow = "1.0.83"
+env_logger = "0.11"
+faster-hex = "0.9.0"
 
 skar-client-fuel = "0.0.7"
 skar-net-types-fuel = "0.0.3"
