--- a/.github/workflows/publish_to_npm.yml
+++ b/.github/workflows/publish_to_npm.yml
@@ -6,7 +6,7 @@ concurrency:
 
 env:
   DEBUG: napi:*
-  APP_NAME: 'hypersync-fuel-client'
+  APP_NAME: 'hyperfuel-client'
   MACOSX_DEPLOYMENT_TARGET: '10.13'
 permissions:
   contents: write
