--- a/npm/darwin-arm64/package.json
+++ b/npm/darwin-arm64/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hyperfuel-client-darwin-arm64",
-  "version": "0.0.5",
+  "name": "@envio-dev/hyperfuel-client-darwin-arm64",
+  "version": "0.0.6",
   "os": [
     "darwin"
   ],
