--- a/npm/linux-x64-gnu/package.json
+++ b/npm/linux-x64-gnu/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hyperfuel-client-linux-x64-gnu",
-  "version": "0.0.5",
+  "name": "@envio-dev/hyperfuel-client-linux-x64-gnu",
+  "version": "0.0.6",
   "os": [
     "linux"
   ],
