--- a/npm/win32-x64-msvc/package.json
+++ b/npm/win32-x64-msvc/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hyperfuel-client-win32-x64-msvc",
-  "version": "0.0.5",
+  "name": "@envio-dev/hyperfuel-client-win32-x64-msvc",
+  "version": "0.0.6",
   "os": [
     "win32"
   ],
