--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@envio-dev/hyperfuel-client",
+  "name": "hyperfuel-client",
   "version": "0.0.6",
   "main": "index.js",
   "types": "index.d.ts",
