added back linux-x64-musl

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "triples": {
       "additional": [
         "aarch64-apple-darwin",
-        "aarch64-unknown-linux-gnu"
+        "aarch64-unknown-linux-gnu",
+        "x86_64-unknown-linux-musl"
       ]
     }
   },
