--- a/examples/simple-logs/package.json
+++ b/examples/simple-logs/package.json
@@ -14,6 +14,6 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "hyperfuel-client": "../.."
+    "@envio-dev/hyperfuel-client": "../.."
   }
 }
