--- a/npm/darwin-x64/package.json
+++ b/npm/darwin-x64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hyperfuel-client-darwin-x64",
+  "name": "@envio-dev/hyperfuel-client-darwin-x64",
   "version": "0.0.6",
   "os": [
     "darwin"
