--- a/npm/win32-x64-msvc/package.json
+++ b/npm/win32-x64-msvc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hyperfuel-client-win32-x64-msvc",
+  "name": "@envio-dev/hyperfuel-client-win32-x64-msvc",
   "version": "0.0.6",
   "os": [
     "win32"
