move from skar to hyperfuel naming

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,9 @@ anyhow = "1.0.83"
 env_logger = "0.11"
 faster-hex = "0.9.0"
 
-skar-client-fuel = "0.0.7"
-skar-net-types-fuel = "0.0.3"
-skar-format-fuel = "0.0.4"
+hyperfuel-client = "0.0.7"
+hyperfuel-net-types = "0.0.3"
+hyperfuel-format = "0.0.4"
 
 [build-dependencies]
 napi-build = "2.0.1"
