--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
-name = "hyperfuel-client"
-version = "0.0.7"
+name = "envio_hyperfuel-client"
+version = "0.0.8"
 
 [lib]
 crate-type = ["cdylib"]
