--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@envio-dev/hyperfuel-client",
-  "version": "1.0.0",
+  "version": "1.0.0-rc1",
   "main": "index.js",
   "types": "index.d.ts",
   "napi": {
