--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@envio-dev/hyperfuel-client",
-  "version": "1.0.0-rc2",
+  "version": "1.1.0",
   "main": "index.js",
   "types": "index.d.ts",
   "napi": {
